1999-08-05  Donn Terry  <donn@interix.com>

	* config/te-interix.h: New file.
	* configure.in (i386-*-interix*): New target.
	* configure: Rebuild.

Wed Aug  4 13:12:17 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (pa_chk_field_selector): Allow 3 byte
	selectors for ELF too.
	(selector_table): Add "ltp" and "rtp" selectors.

1999-08-04  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* config/tc-i386.c (i386_operand): No need to change
	operand_string pointer in segment reg case before goto
	do_memory_reference.  Initialise displacement_string_start and
	displacement_string_end after do_memory_reference label.
	(i386_index_check): Add operand_string param, and print error
	message on failure here.
	(i386_intel_memory_operand): Instead of here.
	(i386_operand): And here.
	(INFER_ADDR_PREFIX): Enable.

	* doc/c-i386.texi (i386-16bit): Document .code16gcc.

	* config/tc-i386.h (DefaultSize): Define.  Renumber following
	opcode_modifier defines.

	From Etienne Lorrain  <etienne.lorrain@ibm.net>
	* config/tc-i386.c (stackop_size): New variable.
	(set_16bit_code_flag): Clear it here.
	(set_16bit_gcc_code_flag): New function.
	(md_pseudo_table): Add "code16gcc" entry.
	(md_assemble): Set i.suffix for insns with DefaultSize modifier.

1999-08-03  Ian Lance Taylor  <ian@zembu.com>

	* config/obj-coff.c (coff_frob_symbol): Always update set_end with
	next_set_end even if the end symbol is being discarded.

	* gasp.c: Add ATTRIBUTE_UNUSED as needed for non-BFD_ASSEMBLER.
	* output-file.c, symbols.c, config/tc-i386.c: Likewise.
	* config/obj-coff.c: Likewise.
	(seg_info_type): Remove.
	(seg_info_off_by_4): Change to array of segT.
	(s_get_segment): Adjust accordingly.
	(obj_pseudo_table): Fully initialize sentinel entry.

	* config/tc-mips.c (append_insn): Correct INSN_SYNC test.  From
	Ralf Baechle <ralf@uni-koblenz.de>.

1999-08-03  Etienne Lorrain  <etienne.lorrain@ibm.net>

	* config/tc-i386.c (f16_3): New. Fixes 16 bit 3 byte nop.
