@@ -1,3 +1,8 @@
+Thu Aug  5 23:05:56 1998  J"orn Rennecke  <amylaar@cygnus.co.uk>
+
+	* config/tc-sh.c (md_assemble):  Call as_bad when there are excess
+	operands.
+
 1999-08-05  Donn Terry  <donn@interix.com>
 
 	* config/te-interix.h: New file.
